[package]
name = "imgfx"
version = "0.2.2"
edition = "2021"
authors = ["Gabriel Hooks"]
description = "Image filtering and modulating with bitwise, arithmetic, and logical operations."
repository = "https://github.com/Echinoidea/imgfx-crate"
keywords = ["image", "images", "graphics"]
license = "MIT"
license_file = "LICENSE.md"


[dependencies]
image = "0.25.5"
clap = { version = "4.5.20", features = ["derive"] }
rayon = "1.10.0"
